# model/base.go
@@ -103,15 +103,22 @@ type ReqInfo struct {
 
 // UploadRes 上传文件
 type UploadRes struct {
+	File string `json:"file" binding:"required"` // 原始文件名
 	Ext  string `json:"ext" binding:"required"`  // 扩展名
 	Name string `json:"name" binding:"required"` // 文件名
 	Path string `json:"path" binding:"required"` // 文件路径
 }
 
-// UploadSuccess 上传文件
+// UploadSuccess 上传单文件
 type UploadSuccess struct {
 	HTTPSuccess
 	Data UploadRes `json:"data" binding:"required"`
+}
+
+// UploadMultiSuccess 上传多文件
+type UploadMultiSuccess struct {
+	HTTPSuccess
+	Data []UploadRes `json:"data" binding:"required"`
 }
 
 // BeforeUpdate 钩子
